package org.babot;

public class Book {
}
