package org.example;

public class FreeProduct extends Product {
    
    
    public FreeProduct(String name, double price) {
        super(name, price);
    }
    
    
    public void getprice() {
    
    }
}
